# charsplit

./: Cargo.toml  README.md  default.nix
.github/workflows/: release.yaml
src/: charset.rs  cli.rs  config.rs  main.rs  utf8_groups.rs  utils.rs
tools/: README.md  build.sh  flake.nix  generate_unicode_matches.py  pyproject.toml
